changed complete layout of games list, multiple betslips

--- a/app/src/main/res/layout/fragment_bet_on_game.xml
+++ b/app/src/main/res/layout/fragment_bet_on_game.xml
@@ -4,287 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.plego.wagerocity.android.fragments.BetOnGameFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
-                android:id="@+id/relativelayout_betongame_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                >
-
-                <TextView
-                    android:id="@+id/textview_betongame_date_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="false"
-                    android:layout_alignParentTop="false"
-                    android:layout_alignWithParentIfMissing="false"
-                    android:layout_centerInParent="true"
-                    android:text="Monday, Jan 3rd, 2015"
-                    android:textIsSelectable="false" />
-
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/linearlayout_betongame_team_a"
-                android:layout_below="@id/relativelayout_betongame_date"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageview_betongame_team_a_flag"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="#c8ffffff" />
-
-                <TextView
-                    android:id="@+id/textview_betongame_team_a_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:minLines="2"
-                    android:scrollHorizontally="false"
-                    android:text="California"
-                    android:textIsSelectable="false"
-                    android:textSize="8pt" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearlayout_betongame_team_b"
-                android:layout_below="@id/relativelayout_betongame_date"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageview_betongame_team_b_flag"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="#c8ffffff" />
-
-                <TextView
-                    android:id="@+id/textview_betongame_team_b_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:minLines="2"
-                    android:scrollHorizontally="false"
-                    android:text="California"
-                    android:textIsSelectable="false"
-                    android:textSize="8pt" />
-
-            </LinearLayout>
-
-            <ImageView
-                android:id="@+id/imageview_betongame_separator_1"
-                android:layout_below="@id/linearlayout_betongame_team_a"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/seperator"
-                />
-
-            <RelativeLayout
-                android:id="@+id/relativelayout_betongame_point_spread"
-                android:layout_below="@id/imageview_betongame_separator_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                >
-
-                <Button
-                    android:id="@+id/button_betongame_pointspread_team_a"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/blue_button"
-                    android:text="-7 1/2 (+125)"
-                    android:textColor="#ffffff"
-
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Point Spread"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:textSize="16sp"
-                    android:layout_alignTop="@id/button_betongame_pointspread_team_a"
-                    android:layout_alignBottom="@id/button_betongame_pointspread_team_a"
-                    />
-
-                <Button
-                    android:id="@+id/button_betongame_pointspread_team_b"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/blue_button"
-                    android:text="+125"
-                    android:textColor="#ffffff"
-
-                    />
-
-            </RelativeLayout>
-
-            <ImageView
-                android:id="@+id/imageview_betongame_separator_2"
-                android:layout_below="@id/relativelayout_betongame_point_spread"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/seperator"
-                />
-
-            <RelativeLayout
-                android:id="@+id/relativelayout_betongame_money_line"
-                android:layout_below="@id/imageview_betongame_separator_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                >
-
-                <Button
-                    android:id="@+id/button_betongame_money_line_team_a"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/blue_button"
-                    android:text="+125"
-                    android:textColor="#ffffff"
-
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Money Line"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:textSize="16sp"
-                    android:layout_alignTop="@id/button_betongame_money_line_team_a"
-                    android:layout_alignBottom="@id/button_betongame_money_line_team_a"
-                    />
-
-                <Button
-                    android:id="@+id/button_betongame_money_line_team_b"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/blue_button"
-                    android:text="+125"
-                    android:textColor="#ffffff"
-
-                    />
-
-            </RelativeLayout>
-
-            <ImageView
-                android:id="@+id/imageview_betongame_separator_3"
-                android:layout_below="@id/relativelayout_betongame_money_line"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/seperator"
-                />
-
-            <RelativeLayout
-                android:id="@+id/relativelayout_betongame_over_under"
-                android:layout_below="@id/imageview_betongame_separator_3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentBottom="true">
-
-                <Button
-                    android:id="@+id/button_betongame_over_team_a"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/blue_button"
-                    android:text="+125"
-                    android:textColor="#ffffff"
-
-                    />
-
-                <TextView
-                    android:id="@+id/textview_betongame_over_under"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Over \n| 5 |\nUnder"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:minLines="3"
-                    android:maxLines="3"
-
-                    />
-
-                <Button
-                    android:id="@+id/button_betongame_over_team_b"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/blue_button"
-                    android:text="+125"
-                    android:textColor="#ffffff"
-
-                    />
-
-            </RelativeLayout>
-
-
-
-        </RelativeLayout>
-
-        </ScrollView>
-
-
+    <ListView
+        android:id="@+id/listview_betslips"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        />
 
 </FrameLayout>
