--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -1,17 +1,35 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.plego.wagerocity.android.fragments.GamesListFragment">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/button_cell_games_list_shoeBetSlip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/blue_button"
+                android:text="Show Bet Slip"
+                android:textColor="#fff"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
 
         <ListView
             android:id="@+id/listview_games_list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </FrameLayout>
