--- a/app/src/main/res/layout/fragment_navigation_bar.xml
+++ b/app/src/main/res/layout/fragment_navigation_bar.xml
@@ -4,8 +4,18 @@
     android:layout_height="44dp"
     tools:context="com.plego.wagerocity.android.fragments.NavigationBarFragment">
 
-    <!--android:background="@color/com_facebook_blue"-->
-    <ImageView
+    <Button
+        android:id="@+id/button_navigation_bar_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/top_arrow"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_centerVertical="true"
+        />
+
+    <Button
+        android:id="@+id/button_navigation_bar_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/logo"
