--- a/app/src/main/res/layout/fragment_bet_on_game.xml
+++ b/app/src/main/res/layout/fragment_bet_on_game.xml
@@ -4,11 +4,43 @@
     android:layout_height="match_parent"
     tools:context="com.plego.wagerocity.android.fragments.BetOnGameFragment">
 
-    <ListView
-        android:id="@+id/listview_betslips"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <ListView
+            android:id="@+id/listview_betslips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/relativeLayout" />
+
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/relativeLayout">
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/heading_bg" />
+
+            <Button
+                android:id="@+id/button_cell_betongame_place_bet"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/blue_button"
+                android:text="Place Bet"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </FrameLayout>
