--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -7,29 +7,45 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical">
-
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/button_cell_games_list_shoeBetSlip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/blue_button"
-                android:text="Show Bet Slip"
-                android:textColor="#fff"
-                android:textSize="20sp" />
-
-        </RelativeLayout>
+        android:orientation="vertical"
+        >
 
         <ListView
             android:id="@+id/listview_games_list"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+
+
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+
+            >
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/heading_bg"
+                />
+
+            <Button
+                android:id="@+id/button_cell_games_list_shoeBetSlip"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/blue_button"
+                android:layout_centerVertical="true"
+                android:text="Show Bet Slip"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
     </LinearLayout>
+
+
 
 </FrameLayout>
