--- a/app/src/main/res/layout/layout_cell_betslip.xml
+++ b/app/src/main/res/layout/layout_cell_betslip.xml
@@ -6,18 +6,34 @@
     android:layout_marginRight="10dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textview_cell_betslip_team_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="Team Name"
-        android:textSize="24sp" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <CheckBox
+            android:id="@+id/checkbox_betslip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            />
+
+        <TextView
+            android:id="@+id/textview_cell_betslip_team_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/checkbox_betslip"
+            android:text="Team Name"
+            android:textSize="24sp" />
+
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textview_cell_betslip_bet_type"
@@ -41,7 +57,6 @@
         android:id="@+id/textview_cell_betslip_team_vs_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:text="Team A vs Team B"
         android:textSize="16sp" />
 
