Pool Name added into mypicks Date format issue fixed sorted picks by date Fixed decimal place issue in my picks After joining the pool, my pools are shown now

--- a/app/src/main/res/layout/fragment_bet_on_game.xml
+++ b/app/src/main/res/layout/fragment_bet_on_game.xml
@@ -13,9 +13,8 @@
         <ListView
             android:id="@+id/listview_betslips"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_above="@+id/relativeLayout" />
-
 
         <RelativeLayout
             android:layout_width="fill_parent"
