--- a/app/src/main/res/layout/layout_cell_games_list.xml
+++ b/app/src/main/res/layout/layout_cell_games_list.xml
@@ -63,6 +63,13 @@
                 android:gravity="center"
                 />
 
+            <TextView
+                android:id="@+id/textview_cell_games_team_a_pitcher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                />
+
             </LinearLayout>
 
         <!--<Button-->
@@ -107,9 +114,14 @@
 
                 />
 
+            <TextView
+                android:id="@+id/textview_cell_games_team_b_pitcher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                />
+
             </LinearLayout>
-
-
 
         </RelativeLayout>
     
