--- a/app/src/main/res/layout/layout_cell_my_picks_list.xml
+++ b/app/src/main/res/layout/layout_cell_my_picks_list.xml
@@ -152,6 +152,41 @@
 
 
                 <TextView
+                    android:id="@+id/textview_cell_my_picks_pool_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pool Name :"
+                    android:textSize="18sp"
+                    android:visibility="gone"
+                    />
+
+                <TextView
+                    android:id="@+id/textview_cell_my_picks_pool_name"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right"
+                    android:maxLines="2"
+                    android:text="California Dragons"
+                    android:textColor="#ffff3100"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
+
+
+                <TextView
                     android:id="@+id/textview_cell_my_picks_bet_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
